Fix spacing when toolbar is expanded

--- a/src/plonetheme/modernbase/theme/css/custom.less
+++ b/src/plonetheme/modernbase/theme/css/custom.less
@@ -767,6 +767,21 @@ footer {
 	}
 }
 
+@media (min-width: 992px) {
+	.plone-toolbar-expanded {
+
+		footer {
+			.address-contact {
+				margin-left: -80px;
+			}
+
+			.social-media {
+				margin-left: 30px;
+			}
+		}
+	}
+}
+
 /* Mailchimp portlet */
 .portletMailChimp {
 
